...
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.fragments.UserListFragment">

    <EditText
        android:id="@+id/searchUserEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/search_username"
        android:padding="@dimen/dp_10"
...
    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_1"
        android:background="@drawable/recycler_view_divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout>
