<resources>
    <string name="app_name">Stack Exchange</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_internet_error">No internet available</string>
    <string name="username">Username:</string>
    <string name="reputation">Reputation:</string>
    <string name="badges">Badges:</string>
    <string name="location">Location:</string>
    <string name="age">Age:</string>
    <string name="creationDate">Creation Date:</string>
    <string name="user">User</string>
    <string name="reputationHeader">Reputation</string>
    <string name="usernameHeader">Username</string>
    <string name="search_username">Search Username</string>
</resources>